[package]
name = "taged"
version = "0.1.0"
edition = "2021"
authors = ["Emilio Izquierdo"]
license = "GPL-3.0-only"
description = "Vim-like TUI editor for music metadata"
keywords = ["tui", "music", "tags", "vim"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
lofty = "0.20"
regex = "1"
anyhow = "1"
thiserror = "1"
